# Data-Structures-in-the-Real-World

./: .gitignore  README.md
homework projects/pa0/pa1/: f1.cc  (+11 more)
homework projects/pa1/: CMakeLists.txt  btree_set.h  die.cc  main.cpp
homework projects/pa2/: Makefile  btree.h  btree_set.h  die.h  test.sh
homework projects/pa3/: CMakeLists.txt  Makefile  advanced_dispatcher.h  basic_dispatcher.h  blocked_bloom_filter_atomic.h  blocked_bloom_filter_base.h  blocked_bloom_filter_shared_mutex.h  blocked_bloom_filter_single_thread.h  bloom_filter.h  bloom_filter_atomic.h  bloom_filter_blo.h  bloom_filter_blo_atomic.h  bloom_filter_pat.h  bloom_filter_pat_atomic.h  bloom_filter_pat_mutex.h  bloom_filter_std.h  bloom_filter_std_atomic.h  fast_io.h  flags.h  main.cc  more_advanced_dispatcher.h
homework projects/pa3/fast/: CMakeLists.txt  Makefile  bloom_filter.h  bloom_filter_base.h  fast_io.h  main.cc
homework projects/pa3/fast/test/: test.cpp
homework projects/pa3/flags/: BLO  BLO_ATOMIC  PAT_ATOMIC  PAT_MUTEX  STD_ATOMIC
homework projects/pa3/full/: advanced_dispatcher.h  basic_dispatcher.h  bloom_filter_blo.h  main.cc  more_advanced_dispatcher.h
homework projects/pa3/full/BFdataNew/1/: gen.cpp
homework projects/pa3/full/flags/: PAT
homework projects/pa3/report/: report.aux  report.tex
homework projects/pa3/test/: pa3  test.cpp
other projects/b_tree_test/: bt_main.cc  rbt_main.cc
other projects/binary search trees/: CMakeLists.txt  b_tree.h  b_tree_with_ptr.h  binary_search_tree.h  main.cpp
other projects/concurrent computing 2/: Makefile  main.cpp
(+69 files in other folders)
